--- a/sbl manual/sbl.tutorial.Rmd
+++ b/sbl manual/sbl.tutorial.Rmd
@@ -28,7 +28,7 @@ power and computing time.
 # `sbl` package installation
 
 `sbl` can be downloaded and installed locally. The download link is
-[here](https://github.com/MeiyueComputBio/sbl/tree/master/R%20package).
+[here](https://github.com/MeiyueComputBio/sbl/tree/master/R%20packge).
 
 ```{r installation, eval=FALSE, message=FALSE, warning=FALSE}
 install.packages('sbl_0.1.0.tar.gz', repos=NULL, type='source')
